--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>我的测试站点</title>
   </head>
@@ -11,9 +11,9 @@
     <p>Welcome to my exciting homepage</p>
     <ul>
       <li><a href="index.html">Home </a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="assets/birds.html">观鸟网</a></li>
-      <li><a href="letters.html">Letters</a></li>
+      <li><a href="projects/projects.html">Projects</a></li>
+      <li><a href="birds/birds.html">观鸟网</a></li>
+      <li><a href="letters/letters.html">Letters</a></li>
     </ul>
 
 <p>原来这唐僧是个慈悯的圣僧。他见行者哀告，却也回心转意道：“既如此说，且饶你这一次。再休无礼。如若仍前作恶，这咒语颠倒就念二十遍！”行者道：“三十遍也由你，只是我不打人了。”却才伏侍唐僧上马，又将摘来桃子奉上。唐僧在马上也吃了几个，权且充饥。</p>
@@ -71,7 +71,7 @@ para.onclick = function() {
       <a href="https://zh.wikipedia.org/zh-hans/神鵰俠侶">神雕侠侣</a>》
       <a href="https://jjjdjfs">哈哈哈</a>
     </p>
-    <img src="favicon.ico" alt="123">
+    <img src="image/favicon.ico" alt="123">
     <p>狗 狗        很
          呆 萌。</p>
     <p>HTML 中用 &lt;p&gt; 来定义段落元素</p>
